--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,21 @@
 
     <dependencies>
 
+        <!-- https://mvnrepository.com/artifact/org.codehaus.jcsp/jcsp -->
+        <dependency>
+            <groupId>org.codehaus.jcsp</groupId>
+            <artifactId>jcsp</artifactId>
+            <version>1.1-rc5</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.multiverse/multiverse-core -->
+        <dependency>
+            <groupId>org.multiverse</groupId>
+            <artifactId>multiverse-core</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
         <dependency>
             <groupId>com.typesafe</groupId>
